--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "buildCommand": "prisma generate && next build",
+  "buildCommand": "npx prisma generate && next build",
   "devCommand": "next dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "SKIP_ENV_VALIDATION": "1"
-  }
+  "regions": ["iad1"]
 }
 
