--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "seed:generate": "npx tsx lib/generateSeedFiles.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
