--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
+    "pdfjs-dist": "4.0.379",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
@@ -45,4 +46,3 @@
     "typescript": "^5.3.3"
   }
 }
-
