--- a/package.json
+++ b/package.json
@@ -55,19 +55,24 @@
     "@storybook/test": "^7.6.21",
     "@swc/core": "^1.15.8",
     "@swc/helpers": "^0.5.18",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^10.0.0",
     "dotenv": "^17.2.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "jsdom": "^27.4.0",
     "postcss": "^8.4.32",
     "prisma": "^5.7.0",
     "storybook": "^7.6.21",
     "tailwindcss": "^3.4.0",
     "ts-loader": "^9.5.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^4.0.16"
   }
 }
