--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "vercel:build": "prisma generate && next build",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test": "vitest run && npx playwright test",
     "test:e2e": "npx playwright test",
     "test:e2e:ui": "npx playwright test --ui",
     "test:e2e:debug": "npx playwright test --debug"
@@ -47,6 +50,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "immer": "^11.1.3",
     "konva": "^9.2.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
@@ -57,7 +61,8 @@
     "react-konva": "^18.2.10",
     "redis": "^4.6.0",
     "superjson": "^2.2.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.11.0",
